moved CDF resources to src/main/resources + some war overlay fixes for cdf. please run only mvn jetty:run-exploded from eclipse. you should find it in run->configurations as 'run eudevfin-dim' works also for debugging.