@@ -20,39 +20,7 @@
     <packaging>war</packaging>
 
 
-    <dependencies>
-
-        <dependency>
-            <groupId>org.devgateway.eudevfin</groupId>
-            <artifactId>auth</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.devgateway.eudevfin</groupId>
-            <artifactId>common-auth</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.devgateway.eudevfin</groupId>
-            <artifactId>common-financial</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.devgateway.eudevfin</groupId>
-            <artifactId>financial</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.vaynberg.wicket.select2</groupId>
-            <artifactId>wicket-select2</artifactId>
-            <version>2.2.2</version>
-        </dependency>
-
-    </dependencies>
+ 
 
     <build>
         <resources>
@@ -61,20 +29,5 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty.version}</version>
-                <configuration>
-                    <jvmArgs>-Xmx512M -XX:MaxPermSize=128M</jvmArgs>
-                    <war>${basedir}/target/cdf-wrapper-${project.version}</war>
-                    <scanIntervalSeconds>3</scanIntervalSeconds>
-                    <webApp>
-                        <contextPath>/</contextPath>
-                    </webApp>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 </project>
